; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/binutils/gas/config/extr_tc-arm.c_parse_reloc.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/binutils/gas/config/extr_tc-arm.c_parse_reloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.reloc_entry = type { i32 }

@BFD_RELOC_UNUSED = common dso_local global i32 0, align 4
@arm_reloc_hsh = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8**)* @parse_reloc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @parse_reloc(i8** %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8**, align 8
  %4 = alloca %struct.reloc_entry*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i8** %0, i8*** %3, align 8
  %7 = load i8**, i8*** %3, align 8
  %8 = load i8*, i8** %7, align 8
  %9 = load i8, i8* %8, align 1
  %10 = sext i8 %9 to i32
  %11 = icmp ne i32 %10, 40
  br i1 %11, label %12, label %14

12:                                               ; preds = %1
  %13 = load i32, i32* @BFD_RELOC_UNUSED, align 4
  store i32 %13, i32* %2, align 4
  br label %64

14:                                               ; preds = %1
  %15 = load i8**, i8*** %3, align 8
  %16 = load i8*, i8** %15, align 8
  %17 = getelementptr inbounds i8, i8* %16, i64 1
  store i8* %17, i8** %5, align 8
  %18 = load i8*, i8** %5, align 8
  store i8* %18, i8** %6, align 8
  br label %19

19:                                               ; preds = %36, %14
  %20 = load i8*, i8** %6, align 8
  %21 = load i8, i8* %20, align 1
  %22 = sext i8 %21 to i32
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %34

24:                                               ; preds = %19
  %25 = load i8*, i8** %6, align 8
  %26 = load i8, i8* %25, align 1
  %27 = sext i8 %26 to i32
  %28 = icmp ne i32 %27, 41
  br i1 %28, label %29, label %34

29:                                               ; preds = %24
  %30 = load i8*, i8** %6, align 8
  %31 = load i8, i8* %30, align 1
  %32 = sext i8 %31 to i32
  %33 = icmp ne i32 %32, 44
  br label %34

34:                                               ; preds = %29, %24, %19
  %35 = phi i1 [ false, %24 ], [ false, %19 ], [ %33, %29 ]
  br i1 %35, label %36, label %39

36:                                               ; preds = %34
  %37 = load i8*, i8** %6, align 8
  %38 = getelementptr inbounds i8, i8* %37, i32 1
  store i8* %38, i8** %6, align 8
  br label %19

39:                                               ; preds = %34
  %40 = load i8*, i8** %6, align 8
  %41 = load i8, i8* %40, align 1
  %42 = sext i8 %41 to i32
  %43 = icmp ne i32 %42, 41
  br i1 %43, label %44, label %45

44:                                               ; preds = %39
  store i32 -1, i32* %2, align 4
  br label %64

45:                                               ; preds = %39
  %46 = load i32, i32* @arm_reloc_hsh, align 4
  %47 = load i8*, i8** %5, align 8
  %48 = load i8*, i8** %6, align 8
  %49 = load i8*, i8** %5, align 8
  %50 = ptrtoint i8* %48 to i64
  %51 = ptrtoint i8* %49 to i64
  %52 = sub i64 %50, %51
  %53 = trunc i64 %52 to i32
  %54 = call %struct.reloc_entry* @hash_find_n(i32 %46, i8* %47, i32 %53)
  store %struct.reloc_entry* %54, %struct.reloc_entry** %4, align 8
  %55 = icmp eq %struct.reloc_entry* %54, null
  br i1 %55, label %56, label %57

56:                                               ; preds = %45
  store i32 -1, i32* %2, align 4
  br label %64

57:                                               ; preds = %45
  %58 = load i8*, i8** %6, align 8
  %59 = getelementptr inbounds i8, i8* %58, i64 1
  %60 = load i8**, i8*** %3, align 8
  store i8* %59, i8** %60, align 8
  %61 = load %struct.reloc_entry*, %struct.reloc_entry** %4, align 8
  %62 = getelementptr inbounds %struct.reloc_entry, %struct.reloc_entry* %61, i32 0, i32 0
  %63 = load i32, i32* %62, align 4
  store i32 %63, i32* %2, align 4
  br label %64

64:                                               ; preds = %57, %56, %44, %12
  %65 = load i32, i32* %2, align 4
  ret i32 %65
}

declare dso_local %struct.reloc_entry* @hash_find_n(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
